# apitit

./: .gitignore  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml
apitit/: __init__.py  apitit.py
docs/: api.rst  conf.py  index.rst  usage.rst
examples/: apitit_to_influx.py
tests/: test_apitit.py
