[project]
name = "apitit"
description = "Python interface to access the online canteen card service at several German universities (e.g. DeliCard, MensaCard, Emeal, ...)."
dynamic = ["version"]
readme = "README.rst"
authors = [
    {name = "Tim Hetkämper"},
]
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
# Runtime dependencies
dependencies = [
    "requests",
]

[project.optional-dependencies]
doc = [
    "setuptools_scm",
    "sphinx",
    "sphinx-rtd-theme",
]
test = [
    "pytest",
]

[build-system]
requires = ["setuptools>=41", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

# Automatically generate version number from git tags
[tool.setuptools_scm]
